# plotjuggler_bridge

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  asan_suppressions.txt  conanfile.txt  create_release.py  data_path.hpp.in  package.xml  pixi.toml  run_and_test.sh  tsan_suppressions.txt
.github/workflows/: _pixi.yaml  _ros.yaml  appimage.yaml  ci.yaml  conda.yaml  pixi_ci.yaml  pixi_humble.yaml  pixi_jazzy.yaml  pixi_kilted.yaml  release-debs.yaml  ros-humble.yaml  ros-jazzy.yaml  ros-rolling.yaml  ros_ci.yaml  ros_humble.yaml  ros_jazzy.yaml  ros_kilted.yaml
00/acef786069/: metadata.json
00/acef786069/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
02/8e940219f6/: metadata.json
02/8e940219f6/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
11/9a792cecd1/: metadata.json
11/9a792cecd1/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
11/a2dcd599ba/: metadata.json
11/a2dcd599ba/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
11/a2dcd599ba/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
1e/c2d6f4c253/: metadata.json
1e/c2d6f4c253/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
22/efb8a26e7d/: metadata.json
22/efb8a26e7d/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
35/7d9892151b/: metadata.json
35/7d9892151b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
35/7d9892151b/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
3e/6d72ed52a8/: metadata.json
3e/6d72ed52a8/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
46/eaa8a83176/: metadata.json
46/eaa8a83176/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4c/d18dd8ad32/: metadata.json
4c/d18dd8ad32/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4e/eea9be2ecb/: metadata.json
4e/eea9be2ecb/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
56/64d137aeeb/: metadata.json
56/64d137aeeb/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
6a/beba3e0562/: metadata.json
6a/beba3e0562/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
79/2abf06fbe4/: metadata.json
79/2abf06fbe4/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
7b/73676d3b12/: metadata.json
7b/73676d3b12/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
7c/d20ad6de03/: metadata.json
7c/d20ad6de03/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
7c/d20ad6de03/1/: content_hash.txt  context.md  metadata.json  prompt.txt
7c/d20ad6de03/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
DATA/: pose_with_covariance_stamped.txt  sensor_msgs-imu.txt
a2/916ec6631d/: metadata.json
a2/916ec6631d/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
a3/cc2f1180a0/: metadata.json
a3/cc2f1180a0/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
a3/cc2f1180a0/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
ae/53f25e11a4/: metadata.json
ae/53f25e11a4/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
ae/53f25e11a4/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
af/8736e141d0/: metadata.json
af/8736e141d0/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
app/include/pj_bridge/: bridge_server.hpp  message_buffer.hpp  message_serializer.hpp  protocol_constants.hpp  (+6 more)
app/src/: bridge_server.cpp  message_buffer.cpp  message_serializer.cpp  session_manager.cpp  standalone_event_loop.cpp  whitelist_filter.cpp
b5/31b04d554b/: metadata.json
bf/c5076b5a8e/: metadata.json
c1/cba0e6aaf5/: metadata.json
c3/16f698da7d/: metadata.json
c7/b9dbe3e69a/: metadata.json
cd/706883ada1/: metadata.json
cf/822bdbcca1/: metadata.json
cmake/: FindZSTD.cmake
conda.recipe/: recipe.yaml
da/a251598522/: metadata.json
docs/: API.md  ARCHITECTURE.md
docs/plans/: 2026-02-03-api-v2-implementation.md  2026-02-03-api-v2-improvements.md  2026-02-04-message-stripping.md  2026-02-21-p0-p1-fixes.md  2026-02-26-unify-backends-design.md
e0/8d6e5d6273/: metadata.json
e1/92bd64bf42/: metadata.json
e1/f271056daf/: metadata.json
e8/05cf64b481/: metadata.json
f5/2b7c6b3ab6/: metadata.json
f8/70afb66437/: metadata.json
fastdds/src/: fastdds_subscription_manager.cpp  fastdds_topic_source.cpp  main.cpp
fc/a108541517/: metadata.json
ff/64dc946f53/: metadata.json
include/pj_ros_bridge/: bridge_server.hpp  generic_subscription_manager.hpp  message_buffer.hpp  message_serializer.hpp  message_stripper.hpp  protocol_constants.hpp  schema_extractor.hpp  session_manager.hpp  time_utils.hpp  topic_discovery.hpp
launch/: test_topics.launch.py
ros2/src/: generic_subscription_manager.cpp  main.cpp  message_stripper.cpp  ros2_subscription_manager.cpp  ros2_topic_source.cpp  schema_extractor.cpp  topic_discovery.cpp
rti/src/: dds_subscription_manager.cpp  dds_topic_discovery.cpp  main.cpp  rti_subscription_manager.cpp  rti_topic_source.cpp
src/: bridge_server.cpp  generic_subscription_manager.cpp  main.cpp  message_buffer.cpp  message_serializer.cpp  message_stripper.cpp  schema_extractor.cpp  session_manager.cpp  topic_discovery.cpp
src/middleware/: websocket_middleware.cpp  zmq_middleware.cpp
tests/integration/: test_client.py
tests/unit/: test_backpressure.cpp  test_bounded_frame_queue.cpp  test_bridge_server.cpp  test_generic_subscription_manager.cpp  test_message_buffer.cpp  test_message_serializer.cpp  test_message_stripper.cpp  test_middleware.cpp  test_protocol_constants.cpp  test_ros2_subscription_manager.cpp  test_schema_extractor.cpp  test_session_manager.cpp  test_topic_discovery.cpp  test_websocket_middleware.cpp  test_whitelist_filter.cpp
(+127 files in other folders)
