<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pj_ros_bridge</name>
  <version>0.0.0</version>
  <description>ROS2 bridge server that forwards ROS2 topic content over WebSocket</description>
  <maintainer email="davide.faconti@gmail.com">davide</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
